k8s/kutt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kutt
  namespace: url-shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kutt
  template:
    metadata:
      labels:
        app: kutt
    spec:
      containers:
        - name: kutt
          image: darexy101/kutt:v1.0.0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kutt
  namespace: url-shortener
spec:
  type: ClusterIP
  selector:
    app: kutt
  ports:
    - port: 3000
      targetPort: 3000
