k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt-ingress
  namespace: url-shortener
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: "34.224.84.52.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kutt
                port:
                  number: 3000
